--- a/app-folder/package.json
+++ b/app-folder/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongod": "^2.0.0",
     "mongoose": "^5.10.11",
@@ -26,6 +27,7 @@
     "eject": "react-scripts eject",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
+  "proxy": "http://localhost:3005",
   "eslintConfig": {
     "extends": "react-app"
   },
