--- a/app-folder/package.json
+++ b/app-folder/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^5.10.11",
     "react": "^16.14.0",
     "react-bootstrap": "^1.4.0",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4"
