--- a/app-folder/package.json
+++ b/app-folder/package.json
@@ -31,7 +31,7 @@
     "eject": "react-scripts eject",
     "start": "concurrently \"npm run dev\" \"npm run client\""
   },
-  "proxy": "http://localhost:3005",
+  "proxy": "https://localhost:3005",
   "eslintConfig": {
     "extends": "react-app"
   },
