--- a/app-folder/package.json
+++ b/app-folder/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap": "^1.4.0",
     "react-cookie": "^4.0.3",
     "react-dom": "^16.14.0",
+    "react-icons": "^4.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4"
   },
