--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "nodemon": "^2.0.6"
   },
   "engines": {
-    "node": "10.16.0",
-    "npm": "6.14.x"
+    "node": "14.x",
+    "npm": "6.x"
   }
 }
