--- a/.gitignore
+++ b/.gitignore
@@ -5021,3 +5021,4 @@ node_modules/.cache/eslint-loader/db9db59901d6c0b9691b8483f3f4fb06090e00cd.json.
 node_modules/.cache/eslint-loader/db38fdb28a662144fca59efe378dbaec989350fa.json.gz
 node_modules/.cache/eslint-loader/db42f09414dc894b03aff01ec4fe9e3fa299b328.json.gz
 node_modules/.cache/eslint-loader/dbba783d2170b32afa47f2334abbead62555c3dd.json.gz
+package-lock.json
