--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-cookie": "^4.0.3",
     "react-dom": "^16.14.0",
     "react-icons": "^4.1.0",
+    "react-native-animated-ellipsis": "^2.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3"
   },
