--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "bcrypt": "^5.0.0",
     "bootstrap": "^4.5.3",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "env-cmd": "^10.1.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongod": "^2.0.0",
@@ -33,8 +35,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "nodemon server/app.js"
-    
+    "server": "env-cmd -f ./config/dev.env nodemon server/app.js"
   },
   "proxy": "http://localhost:3005",
   "eslintConfig": {
