--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "react-dom": "^16.14.0",
     "react-icons": "^4.1.0",
     "react-native-animated-ellipsis": "^2.0.0",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^4.0.3",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "client": "react-scripts start",
