--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "validator": "^13.5.2"
   },
   "scripts": {
     "client": "react-scripts start",
