--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0",
     "validator": "^13.5.2"
   },
   "scripts": {
