--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "homepage": "./",
   "dependencies": {
     "@babel/core": "^7.13.8",
+    "@chatscope/chat-ui-kit-react": "^1.8.3",
     "@reduxjs/toolkit": "^1.6.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.1",
+    "bad-words": "^3.0.0",
     "bcrypt": "^5.0.0",
     "bootstrap": "^4.5.3",
     "cors": "^2.8.5",
@@ -17,6 +19,7 @@
     "env-cmd": "^10.1.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongod": "^2.0.0",
     "mongoose": "^5.13.9",
     "nodemailer": "^6.5.0",
@@ -31,6 +34,8 @@
     "react-scripts": "^4.0.3",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0",
     "validator": "^13.5.2"
   },
   "scripts": {
@@ -59,6 +64,7 @@
     ]
   },
   "devDependencies": {
+    "@types/socket.io-client": "^3.0.0",
     "concurrently": "^5.3.0",
     "nodemon": "^2.0.6"
   },
