--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   "scripts": {
     "client": "react-scripts start",
     "start": "node server/app.js ",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "dev": "export NODE_OPTIONS=--openssl-legacy-provider && concurrently \"npm run server\" \"npm run client\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -70,7 +70,7 @@
     "nodemon": "^2.0.6"
   },
   "engines": {
-    "node": "16.x",
-    "npm": "8.x"
+    "node": "18.x",
+    "npm": "9.x"
   }
 }
